# NT-Bind

./: Cargo.toml  README.md
Ada/: nt_ada-numbertheory.adb  nt_ada-numbertheory.ads  nt_ada.ads  nt_error.ads  numbertheory.ads  test.adb
C/: ntheader.h  numbertheory.h  test.c
C++/: numbertheory.h  numbertheory.hpp  test.cpp
Fortran/: nt_fortran.f08  ntmod.f08  numbertheory.f08
Julia/: numbertheory.jl
Python/: NumberTheory.py  test.py
src/: lib.rs
